--- a/Moviles/css/medio_tiempo.css
+++ b/Moviles/css/medio_tiempo.css
@@ -24,6 +24,8 @@
 
     --container-width: 1200px;
     --header-height: 4rem;
+
+    --category-color: #3BC095;
 }
 
 /* Reset */
@@ -312,4 +314,97 @@ body {
   .u-latest {
     grid-row: span 2;
   }
+}
+
+/* Main */
+.Main-container {
+  margin: 0 auto;
+  max-width: var(--container-width);
+}
+
+.Main-container > * {
+  background-color: var(--bg-alternate-color);
+  margin-bottom: 1rem;
+}
+
+.Main-title {
+  margin: 1rem auto;
+  font-weight: bold;
+  font-style: italic;
+  text-transform: lowercase;
+  text-align: center;
+}
+
+.TheLast {
+  border-top: medium solid var(--second-color);
+}
+
+.Recommended {
+  border-top: medium solid var(--bg-modal-color);
+}
+
+.Calendar {
+  border-top: medium solid var(--main-color);
+}
+
+@media screen and (min-width: 64em) {
+  .Main-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .Main-container > * {
+    width: 32%;
+  }
+}
+
+/* Card-main */
+.Card-main {
+  border-bottom: thin solid var(--bg-modal-color);
+}
+
+.Card-main h5 {
+  padding: .21rem;
+  display: inline-block;
+  font-size: .84rem;
+  text-transform: uppercase;
+  transform: translateY(.84rem);
+  background-color: var(--category-color);
+  color: var(--bg-alternate-color);
+}
+
+.Card-main img {
+  display: block;
+  width: 100%;
+}
+
+.Card-main h3 {
+  padding: 1rem;
+}
+
+/* Card-second */
+.Card-second {
+  border-bottom: thin solid var(--bg-modal-color);
+}
+
+.Card-second a {
+  padding: 1rem 1rem 0;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-rows: repeat(2, auto);
+  grid-gap: 0 1rem;
+}
+
+.Card-second img {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+}
+
+.Card-second h5 {
+  padding: .21rem;
+  display: inline-block;
+  font-size: .84rem;
+  text-transform: uppercase;
+  background-color: var(--category-color);
+  color: var(--bg-alternate-color);
 }
